ODIP Space migration - Deprecated Import Code Cleanup
